# django-react-boilerplate

./: .gitignore  HOWTO-Dev.md  HOWTO-Dockerize.md  README.md  docker-compose.yml  pyproject.toml
api/: Dockerfile  admin.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py
config/: settings.py  urls.py
config/settings/: __init__.py
config/settings/components/: common.py
frontend/: Dockerfile  package.json
frontend/src/: App.js  index.css  index.js
frontend/src/Components/: Modal.js
